<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/authFragment">

    <action android:id="@+id/action_global_authFragment"
        app:destination="@id/authFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.snapcal.ui.auth.AuthFragment"
        android:label="@string/auth_screen">
        <action
            android:id="@+id/action_authFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.snapcal.ui.auth.RegisterFragment"
        android:label="Register">
        <action
            android:id="@+id/action_registerFragment_to_exploreFragment"
            app:destination="@id/exploreFragment" />
    </fragment>

    <fragment
        android:id="@+id/exploreFragment"
        android:name="com.example.snapcal.ui.explore.ExploreFragment"
        android:label="@string/explore_screen" />

    <navigation
        android:id="@+id/myMealsNavGraph"
        app:startDestination="@id/myMealsFragment">
        <fragment
            android:id="@+id/myMealsFragment"
            android:name="com.example.snapcal.ui.mymeals.MyMealsFragment"
            android:label="@string/my_meals_screen">
            <action
                android:id="@+id/action_myMealsFragment_to_mealFormFragment"
                app:destination="@id/mealFormFragment" />
        </fragment>
        <fragment
            android:id="@+id/mealFormFragment"
            android:name="com.example.snapcal.ui.mealform.MealFormFragment"
            android:label="@string/meal_form_screen">
            <argument
                android:name="mode"
                android:defaultValue="add"
                app:argType="string" />
            <argument
                android:name="mealId"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
        </fragment>
    </navigation>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.snapcal.ui.profile.ProfileFragment"
        android:label="@string/profile_screen" />

    <fragment
        android:id="@+id/recipeSearchFragment"
        android:name="com.example.snapcal.ui.recipes.RecipeSearchFragment"
        android:label="@string/nav_recipes" />

</navigation>
